# waxal_ctc

./: .gitignore  README.md  RUNPOD.md  pyproject.toml
notebooks/: waxal_kaggle.ipynb
scripts/: average_checkpoints.py  bench.py  bench_extract.py  build_kaggle_notebook.py  build_lm.py  check_hub.py  check_leakage.py  eval_checkpoint.py  infer.py  normalization_cost.py  profile_data.py  pseudo_label.py  push_checkpoint.py  sweep_lm.sh  sync_features.py  train_ctc.py  verify_cache.py
src/waxal/: data.py  hw.py  metric.py  normalize.py
