[project]
name = "waxal-asr"
version = "0.1.0"
description = "Google WAXAL ASR Challenge — joint w2v-BERT 2.0 CTC over Lingala, Luganda and Shona"
requires-python = ">=3.10"

# Core deps stay light so the analysis scripts (profiling, metric, normalization
# cost) run on a laptop without pulling ~2.5GB of CUDA wheels.
dependencies = [
    "datasets>=4.0",
    "huggingface-hub>=0.34",
    "jiwer>=3.0",
    "numpy>=1.26",
    "pandas>=2.0",
]

[project.optional-dependencies]
# Everything needed to actually train or run inference. Install this on RunPod.
train = [
    "accelerate>=1.0",
    "soundfile>=0.12",
    # datasets >= 4.0 decodes audio through torchcodec; without it, loading the
    # Audio column raises at the first row rather than at import.
    "torchcodec>=0.2",
    "torch>=2.4",
    "transformers>=4.44",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/waxal"]
