[project]
name = "waxal-asr"
version = "0.1.0"
description = "Google WAXAL ASR Challenge — joint w2v-BERT 2.0 CTC over Lingala, Luganda and Shona"
requires-python = ">=3.10"

# Core deps stay light so the analysis scripts (profiling, metric, normalization
# cost) run on a laptop without pulling ~2.5GB of CUDA wheels.
dependencies = [
    "datasets>=4.0",
    "huggingface-hub>=0.34",
    "jiwer>=3.0",
    "numpy>=1.26",
    "pandas>=2.0",
]

[project.optional-dependencies]
# Training deps EXCLUDING torch. GPU images (RunPod, Colab, Kaggle) ship a torch
# built against their own driver/CUDA; reinstalling it from PyPI is a multi-GB
# download that can silently land a mismatched build. Use this extra there.
train = [
    "accelerate>=1.0",
    "soundfile>=0.12",
    # datasets >= 4.0 decodes audio through torchcodec; without it, loading the
    # Audio column raises at the first row rather than at import.
    "torchcodec>=0.2",
    "transformers>=4.44",
]

# Only for a machine with no torch at all. On a GPU image, don't.
torch = ["torch>=2.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/waxal"]
